add template admin dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>Book Store</title>
     <link href="./src/assets/styles/main.css" />
+    <link href="./src/assets/styles/admin.css" />
 
     <!-- icon font-awesome -->
     <link
